Update PlayerQuitThread to fix IDE warnings and to not use deprecated methods